fixing some badboxes, enumerating ones I can't fix

--- a/2021.10.30 („Ion” de Liviu Rebreanu)/Eseu roman interbelic realist obiectiv/content.tex
+++ b/2021.10.30 („Ion” de Liviu Rebreanu)/Eseu roman interbelic realist obiectiv/content.tex
@@ -91,4 +91,4 @@ Scena în care Ion sărută pământul este sugestivă pentru patima lui și ant
 
 \subsection{Concluzie}
 
-Apreciat la apariție de criticul E. Lovinescu drept \textit{„cea mai puternică creație obiectivă a literaturii române”}, romanul \operatitle\ este o capodoperă a literaturii române realiste interbelice.
+Apreciat la apariție de criticul E. Lovinescu drept \textit{„cea mai puternică creație o\-biec\-ti\-vă a literaturii române”}, romanul \operatitle\ este o capodoperă a literaturii române realiste interbelice.
