--- a/2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu comedie/content.tex
+++ b/2022.01.15 („O scrisoare pierdută” de I. L. Caragiale)/Eseu comedie/content.tex
@@ -37,7 +37,7 @@ Intriga piesei pornește de la o întâmplare banală: pierderea unei scrisori i
 Conflictul dramatic principal constă în înfruntarea pentru putere politică a două forțe opuse: reprezentanții partidului aflat la putere (prefectul Ștefan Tipătescu, Zaharia Trahanache -- președintele grupării locale a partidului -- și Zoe, soția acestuia) și gruparea independentă constituită în jurul lui Nae Cațavencu, ambițios avocat și proprietar al ziarului \textit{„Răcnetul Carpaților”}. Conflictul secundar este reprezentat de grupul Farfuridi -- Brânzovenescu, care se teme de trădarea prefectului.
 
 
-\section{Ilustrarea temei comediei studiate prin scene/citate/secvențe comentate}
+\section{Ilustrarea temei comediei studiate prin scene/citate/sec\-ven\-țe comentate}
 
 Tema comediei constă în satirizarea vieții publice și de familie a unor politicieni din societatea românească de la sfârșitul secolului al \rom{19}-lea.
 
