--- a/book/book.tex
+++ b/book/book.tex
@@ -13,7 +13,7 @@
 
 % Beginning of text
 
-% esee
+% eseuri
 \part{Gen epic}
 
 
@@ -31,6 +31,7 @@
 
 \chapter{Eseu despre particularitățile de construcție a personajului principal dintr-o nuvelă studiată}
 \input{../2021.10.16 („Moara cu noroc” de Ioan Slavici)/Eseu personaj principal nuvela/content.tex}
+% underfull \vbox (badness 10000), prima pagina, spatiul intre sectiuni, nu poate incadra textul in pagina ca sa puna tot fara spatiu jos
 
 
 % baltagul
@@ -47,11 +48,13 @@
 
 \chapter{Eseu despre particularitățile de construcție a personajului principal dintr-un roman interbelic}
 \input{../2021.10.30 („Ion” de Liviu Rebreanu)/Eseu personaj principal roman interbelic realist obiectiv/content.tex}
+% underfull \vbox (badness 3861), prima pagina, nu poate incadra textul in toata pagina
 
 
 % enigma otiliei
 \chapter{Eseu privind tema și viziunea despre lume într-un roman realist-balzacian studiat}
 \input{../2021.11.06 („Enigma Otiliei” de George Călinescu)/Eseu roman realist balzacian/content.tex}
+% underfull \vbox (badness 2142), nu poate incadra bine tot in prima pagina
 
 \chapter{Eseu despre particularitățile de construcție a personajului principal dintr-un roman realist-balzacian}
 \input{../2021.11.06 („Enigma Otiliei” de George Călinescu)/Eseu personaj principal roman realist balzacian/content.tex}
@@ -64,6 +67,8 @@
 \chapter{Eseu despre particularitățile de construcție a personajului principal dintr-un roman psihologic}
 \input{../2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu personaj principal roman psihologic/content.tex}
 
+
+\addtocontents{toc}{\protect\vfill} % fix a badbox in the ToC
 
 
 \part{Gen dramatic}
