poezie romantista nu romantica fi-mi-ar capu

--- a/book/book.tex
+++ b/book/book.tex
@@ -12,7 +12,6 @@
 
 
 % Beginning of text
-
 % eseuri
 \part{Gen epic}
 
@@ -87,8 +86,8 @@
 
 
 % luceafarul
-\chapter{Eseu cu privire la tema și viziunea despre o poezie romantică}
-\input{../2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantica/content.tex}
+\chapter{Eseu cu privire la tema și viziunea despre o poezie romantistă}
+\input{../2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantista/content.tex}
 
 
 % plumb
@@ -109,4 +108,12 @@
 % riga crypto
 \chapter{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă studiată}
 \input{../2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/content.tex}
+
+
+
+% subiectul 2
+\part{Extra: Modele pentru subiectul al II-lea}
+
+
+
 \end{document}
