--- a/2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantista/Eseu_poezie_romantista.tex
+++ b/2022.01.22 („Luceafărul” de Mihai Eminescu)/Eseu poezie romantista/Eseu_poezie_romantista.tex
@@ -1,7 +1,7 @@
 % Include the preamble
 \input{../../preamble.tex}
 
-\title{Eseu cu privire la tema și viziunea despre o poezie romantică}
+\title{Eseu cu privire la tema și viziunea despre o poezie romantistă}
 
 \begin{document}
  \maketitle % Show the title
