--- a/book/book.tex
+++ b/book/book.tex
@@ -112,8 +112,11 @@
 
 
 % subiectul 2
+\setcounter{chapter}{0} % reset chapter count
 \part{Extra: Modele pentru subiectul al II-lea}
+\ApplySubIIStyling      % custom section settings for this part of the doc
 
+%\input{../2022.04.01 (Subiectul II)/content/01_didascalii.tex}
 
 
 \end{document}
