--- a/2022.04.01 (Subiectul II)/content/01_didascalii.tex
+++ b/2022.04.01 (Subiectul II)/content/01_didascalii.tex
@@ -1,1 +1,13 @@
-\chapter{Rolul notațiilor autorului/didascaliile}
+\section{Rolul notațiilor autorului/didascaliile}
+
+Didascaliile sunt percepute ca indici clari ai teatralității unei piese, făcând trecerea de la nivelul textual, la cel al reprezentării scenice.
+
+În fragmentul dat, apar \ex{câte?} indicații scenice care adaugă informații importante în scopul înțelegerii textului.
+
+Prima indicație care apare în text este una externă, care conține desrierea locului acțiunii. Decorul prezintă \ex{descrierea decorului + citate din text}.
+
+A doua didascalie, care este internă, cuprinde intervențiile autorului între paranteze și este inclusă într-o replică a lui \ex{nume personaj}, care prezintă o acțiune a acesteia. \ex{acțiune a personajului între paranteze}.
+
+A treia indicație este una externă, care cuprinde descrierea lui \ex{nume personaj}, despre care se spune că este \ex{descriere + citate din text}.
+
+În concluzie, în fragmentul dat, didascaliile sunt folosite în scopul informării actorilor, dar și a cititorilor, prin prezentarea detaliată a decorului și a acțiunilor personajelor.
