--- a/2022.04.01 (Subiectul II)/Modele_subiectul_2.tex
+++ b/2022.04.01 (Subiectul II)/Modele_subiectul_2.tex
@@ -3,19 +3,17 @@
 \input{../preamble.tex}
 \title{Modele pentru subiectul al II-lea}
 
-
 \begin{document}
 \ApplySubIIStyling % custom section settings for this part of the doc
 \maketitle         % Show the title
 \tableofcontents   % Show table of contents
+\clearpage         % Begin on new page after ToC
+
+
+% Beginning of text
+\input{content/01_didascalii.tex}
+\input{content/02_modalitati_de_caracterizare_personaj.tex}
 \clearpage
-
-\section{milsugi}
-sdjkfsdjfn
-
-\section{milbei}
-sdjfnjsdf
-
-\section{milbalbotezi}
-skfklsdjkj
+\input{content/03_perspectiva_narativa_subiectiva.tex}
+\input{content/04_perspectiva_narativa_obiectiva.tex}
 \end{document}
