--- a/2022.04.01 (Subiectul II)/content/02_modalitati_de_caracterizare_personaj.tex
+++ b/2022.04.01 (Subiectul II)/content/02_modalitati_de_caracterizare_personaj.tex
@@ -1,3 +1,28 @@
 \section{Modalități de caracterizare a unui personaj}
 
+Personajul este o instanță narativă definitorie pentru genul epic, o creație a autorului care exprimă viziunea asupra unei teme literare.
 
+\ex{nume personaj} este personajul principal din fragmentul dat din opera literară \ex{titlul} scrisă de \ex{autorul}, deoarece participă la evenimentele prezentate și reprezintă instanța naratorială prin intermediul căreia autorul textului epic își exprimă viziunea despre lume, atitudinea față de aceasta, sentimentele sau ideile.
+
+\ex{nume personaj} este caracterizat atât prin mijloace directe, cât și indirecte.
+
+Caracterizarea directă este realizată prin intermediul naratorului, care spune că este \ex{ex. din text + citate}.
+
+Portretul moral este dominant și se realizează prin intermediul caracterizării indirecte, reieșind din comportamentul personajului: \ex{ex. din text + citate}. Din toate aceste calități reiese faptul că \ex{ce?}.
+
+În concluzie, trăsăturile dominante ale personajului principal sunt că acesta este \ex{trăsături}.
+
+
+
+
+\comment{
+Personajul literar este o prezență prin intermediul căreia scriitorul își exprimă, în mod indirect, gândurile, ideile și sentimentele, într-o operă epică.
+
+Fragmentul dat spre analiză, extras din opera literară \ex{titlul} de \ex{autorul}, în care se prezintă personajul \ex{ex: într-o zi oarecare, la cumpărături}. Portretul \ex{nume personaj} este conturat atât prin caracterizare directă, cât și prin caracterizare indirectă.
+
+Caracterizarea directă, realizată de către \ex{ex: narator}, evidențiază \ex{ex: trăsăturile} \ex{fizice} ale \ex{nume personaj}. Astfel, \ex{el/ea} se dovedește a fi \ex{ex. din text + citat}.
+
+Caracterizarea indirectă reiese din relația cu personajele, din atitudine și din acțiunile sale. Așa se face că, din relația cu celelalte personaje, reiese faptul că \ex{ex. din text} \ex{+ citat}. Din acțiunile sale, reiese că este \ex{ex. din text + citat}
+
+Așadar, prin caracterizarea directă și indirectă, se conturează portretul \ex{nume personaj}, a cărui prezență conferă unitate și originalitate stilului abordat de scriitor.
+}
