--- a/2022.04.01 (Subiectul II)/Modele_subiectul_2.tex
+++ b/2022.04.01 (Subiectul II)/Modele_subiectul_2.tex
@@ -13,7 +13,10 @@
 % Beginning of text
 \input{content/01_didascalii.tex}
 \input{content/02_modalitati_de_caracterizare_personaj.tex}
+\input{content/05_rolul_interogatiilor_retorice.tex}
 \clearpage
 \input{content/03_perspectiva_narativa_subiectiva.tex}
 \input{content/04_perspectiva_narativa_obiectiva.tex}
+\clearpage
+\input{content/06_relatia_dintre_ideea_poetica_si_mijloacele_artistice.tex}
 \end{document}
