more work on s2

--- a/book/book.tex
+++ b/book/book.tex
@@ -112,11 +112,18 @@
 
 
 % subiectul 2
-\setcounter{chapter}{0} % reset chapter count
+\ApplySubIIStyling % custom section settings for this part of the doc
 \part{Extra: Modele pentru subiectul al II-lea}
-\ApplySubIIStyling      % custom section settings for this part of the doc
 
-%\input{../2022.04.01 (Subiectul II)/content/01_didascalii.tex}
+%\input{../2022.04.01 (Subiectul II)/content.tex}
+\input{../2022.04.01 (Subiectul II)/content/01_didascalii.tex}
+\input{../2022.04.01 (Subiectul II)/content/02_modalitati_de_caracterizare_personaj.tex}
+\input{../2022.04.01 (Subiectul II)/content/03_rolul_interogatiilor_retorice.tex}
+\clearpage
+\input{../2022.04.01 (Subiectul II)/content/04_perspectiva_narativa_subiectiva.tex}
+\input{../2022.04.01 (Subiectul II)/content/05_perspectiva_narativa_obiectiva.tex}
+\clearpage
+\input{../2022.04.01 (Subiectul II)/content/06_relatia_dintre_ideea_poetica_si_mijloacele_artistice.tex}
 
 
 \end{document}
