switched over to custom package

--- a/2021.10.16 („Moara cu noroc” de Ioan Slavici)/Eseu nuvela/Eseu_nuvela.tex
+++ b/2021.10.16 („Moara cu noroc” de Ioan Slavici)/Eseu nuvela/Eseu_nuvela.tex
@@ -1,5 +1,5 @@
 % Include the preamble
-\input{../../preamble.tex}
+\input{../../preamble-article.tex}
 
 \title{Eseu cu privire la tema și viziunea despre lume dintr-o nuvelă studiată}
 
