--- a/2021.10.23 („Baltagul” de Mihail Sadoveanu)/Eseu personaj principal roman interbelic realist/Eseu_personaj_principal_roman_interbelic_realist.tex
+++ b/2021.10.23 („Baltagul” de Mihail Sadoveanu)/Eseu personaj principal roman interbelic realist/Eseu_personaj_principal_roman_interbelic_realist.tex
@@ -1,5 +1,5 @@
 % Include the preamble
-\input{../../preamble.tex}
+\input{../../preamble-article.tex}
 
 \title{Particularități de construcție a personajului principal dintr-un roman interbelic, realist}
 
