--- a/2021.11.06 („Enigma Otiliei” de George Călinescu)/Eseu roman realist balzacian/Eseu_roman_realist_balzacian.tex
+++ b/2021.11.06 („Enigma Otiliei” de George Călinescu)/Eseu roman realist balzacian/Eseu_roman_realist_balzacian.tex
@@ -1,5 +1,5 @@
 % Include the preamble
-\input{../../preamble.tex}
+\input{../../preamble-article.tex}
 
 \title{Eseu privind tema și viziunea despre lume într-un roman realist-balzacian studiat}
 
