--- a/2021.10.16 („Moara cu noroc” de Ioan Slavici)/Eseu personaj principal nuvela/Eseu_personaj_principal_nuvela.tex
+++ b/2021.10.16 („Moara cu noroc” de Ioan Slavici)/Eseu personaj principal nuvela/Eseu_personaj_principal_nuvela.tex
@@ -1,5 +1,5 @@
 % Include the preamble
-\input{../../preamble.tex}
+\input{../../preamble-article.tex}
 
 \title{Eseu despre particularitățile de construcție a personajului principal dintr-o nuvelă studiată}
 
