--- a/2021.10.30 („Ion” de Liviu Rebreanu)/Eseu roman interbelic realist obiectiv/Eseu_roman_interbelic_realist_obiectiv.tex
+++ b/2021.10.30 („Ion” de Liviu Rebreanu)/Eseu roman interbelic realist obiectiv/Eseu_roman_interbelic_realist_obiectiv.tex
@@ -1,5 +1,5 @@
 % Include the preamble
-\input{../../preamble.tex}
+\input{../../preamble-article.tex}
 
 \title{Eseu cu privire la tema și viziunea despre lume dintr-un roman interbelic realist, obiectiv}
 
