--- a/2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu personaj principal roman psihologic/Eseu_personaj_principal_roman_psihologic.tex
+++ b/2021.11.13 („Ultima noapte de dragoste, întâia noapte de război” de Camil Petrescu)/Eseu personaj principal roman psihologic/Eseu_personaj_principal_roman_psihologic.tex
@@ -1,5 +1,5 @@
 % Include the preamble
-\input{../../preamble.tex}
+\input{../../preamble-article.tex}
 
 %\title{Eseu cu privire la tema și viziunea despre lume dintr-un roman psihologic studiat}
 \title{Eseu despre particularitățile de construcție a personajului principal dintr-un roman psihologic}
