fixed header text for s2

--- a/book/book.tex
+++ b/book/book.tex
@@ -112,6 +112,7 @@
 
 
 % subiectul 2
+\clearpage
 \ApplySubIIStyling % custom section settings for this part of the doc
 \part{Extra: Modele pentru subiectul al II-lea}
 
