--- a/book/preamble-book.tex
+++ b/book/preamble-book.tex
@@ -22,6 +22,7 @@
   \addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
   \setcounter{tocdepth}{1}
   \setcounter{section}{0}
+  \renewcommand{\HeaderROText}{Modele pentru subiectul al \rom{2}-lea}
   %\newcommand{\sectionbreak}{\ifnum\value{section}>0 \clearpage\fi} % sections on new page
 }
 
