working ToC hyperlinks and page nrs for pt3 of doc

--- a/book/book.tex
+++ b/book/book.tex
@@ -115,6 +115,7 @@
 \clearpage
 \ApplySubIIStyling % custom section settings for this part of the doc
 \part{Extra: Modele pentru subiectul al II-lea}
+\refstepcounter{chapter}
 
 \input{../2022.04.01 (Subiectul II)/content/01_didascalii.tex}
 \input{../2022.04.01 (Subiectul II)/content/02_modalitati_de_caracterizare_personaj.tex}
